--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+
+
     <div class="container">
         <header>
             <h1>Privacy Policy</h1>
             <p>Last updated: July 25, 2023</p>
         </header>
+
+
+        <div class="wrap-container">
+
         <section>
             <h2>Introduction</h2>
             <p>
@@ -72,10 +80,10 @@
                 [Your Ecommerce Store] may update this Privacy Policy from time to time. We will notify you of any significant changes through our website or other communication channels. Please review this page periodically for updates.
             </p>
         </section>
-        <footer>
-            <p>Contact us at privacy@[yourstore].com for any privacy-related concerns.</p>
-            <p>Last updated: July 25, 2023</p>
-        </footer>
+   
+
+    </div>
+
     </div>
 </body>
 </html>
